--- a/css/styles.css
+++ b/css/styles.css
@@ -1,250 +1,76 @@
-/*** reset ***/
-*,
-*::before,
-*::after {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
+.filter{
+    margin: 30px 0 10px 0;
+    display: flex;
+    gap: 40px;
+    padding: 4px;
 }
 
-/* elements inside forms */
-form * {
-  border: none;
-  outline: none;
-  font: inherit;
-  background-color: transparent;
+.status-filter{
+    display: flex;
+    text-align: left;
+    gap:2px;
+    margin: 10px 180px -10px 0;
 }
 
-button {
-  border: none;
-  font: inherit;
-  background-color: transparent;
-  cursor: pointer;
+.sorting-filter{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 10px 0 -10px 0;
 }
 
-ul {
-  list-style: none;
+.tasks-list{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
-a {
-  text-decoration: none;
-  color: inherit;
+th{
+    padding: 10px;
+    width: 150px;
+    background-color: #4B4E6D;
+    color:aliceblue;
 }
 
-img {
-  max-width: 100%;
+td{
+    padding: 10px;
+    border: 1px solid #000;
+    text-align: center;
 }
 
-/* custom properties */
-:root {
-  /* font */
-  --font-family: "Inter", sans-serif;
-  --font-size-24: 24px;
-  --font-size-16: 16px;
-  --font-size-14: 14px;
-
-  /* color */
-  --black: #000;
-  --dark-gray: #504e4e;
-  --blue: #82cfff;
-  --pink: #ff9c9c;
-  --green: #abe5bc;
-  --beige: #fffaf0;
-  --white: #fff;
-
-  /* shadow */
-  --green-shadow: 6px 6px 0px var(--green);
-  --blue-shadow: 6px 6px 0px var(--blue);
-  --pink-shadow: 6px 6px 0px var(--pink);
-  --black-shadow: 4px 4px 0px var(--black);
-
-  /* space */
-  --space-4: 4px;
-  --space-8: 8px;
-  --space-16: 16px;
-  --space-24: 24px;
-  --space-32: 32px;
-  --space-48: 48px;
-
-  /* radius */
-  --radius-8: 8px;
-
-  /* form elements */
-  --input-height: 45px;
+.task-name-input{
+    width:460px;
 }
 
-/* general */
-html,
-body {
-  height: 100%;
+.add-tasks-btn{
+    width: 70px;
 }
 
-body {
-  background-color: var(--beige);
-  font-family: var(--font-family);
+.task-name-input,
+.task-due-date,
+.priority-input,
+.add-tasks-btn{
+    height: 25px;
 }
 
-.max-width-container {
-  /* include padding values */
-  max-width: 1232px;
-  margin-inline: auto;
-  padding-inline: var(--space-16);
+.fa-trash{
+    color: rgb(239, 188, 188);
+}
+.fa-trash:hover{
+    color: rgb(241, 97, 97);
 }
 
-/* utility classes */
-.flex {
-  display: flex;
+.fa-check{
+    color:rgb(127, 170, 127);
+}
+.fa-check:hover{
+    color:rgb(17, 116, 17);
 }
 
-.justify-center {
-  justify-content: center;
+.fa-pen-to-square{
+    color:rgb(182, 182, 241);
 }
-
-.justify-between {
-  justify-content: space-between;
-}
-
-.items-center {
-  align-items: center;
-}
-
-.flex-column {
-  flex-direction: column;
-}
-
-.height-full {
-  height: 100%;
-}
-
-.text-center {
-  text-align: center;
-}
-
-.cursor-pointer {
-  cursor: pointer;
-}
-
-.white-background {
-  background-color: var(--white);
-}
-
-.blue-background {
-  background-color: var(--blue);
-}
-
-.pink-background {
-  background-color: var(--pink);
-}
-
-.green-background {
-  background-color: var(--green);
-}
-
-/* shared style */
-.button {
-  border: 2px solid var(--black);
-  box-shadow: var(--black-shadow);
-  border-radius: var(--radius-8);
-}
-
-.regular-button {
-  font-weight: 600;
-  padding-inline: var(--space-16);
-  height: var(--input-height);
-}
-
-.circle-button {
-  width: 50px;
-  height: 50px;
-  border-radius: 100%;
-  padding: var(--space-8);
-}
-
-.circle {
-  width: 14px;
-  height: 14px;
-  border-radius: 100%;
-}
-
-.form {
-  margin-top: var(--space-32);
-}
-
-.label {
-  font-weight: 600;
-  font-size: var(--font-size-16);
-  /* to apply margins for inline labels */
-  display: inline-block;
-  margin-top: var(--space-16);
-}
-
-.label:first-child {
-  margin-top: 0;
-}
-
-.secondary-label {
-  display: block;
-  font-weight: 500;
-  font-size: var(--font-size-14);
-  margin-top: var(--space-16);
-}
-
-.input,
-.textarea-input,
-.status-select {
-  border: 2px solid var(--black);
-  border-radius: var(--radius-8);
-  width: 100%;
-  padding: var(--space-16);
-  margin-top: var(--space-16);
-}
-
-.input,
-.status-select {
-  height: var(--input-height);
-}
-
-.textarea-input {
-  resize: none;
-}
-
-.status-select .arrow-icon {
-  transform: rotate(270deg);
-  /* move to top to fix alignment */
-  margin-bottom: var(--space-8);
-}
-
-.status-dropdown {
-  border: 2px solid var(--black);
-  border-radius: var(--radius-8);
-  margin-top: var(--space-4);
-  padding: var(--space-16);
-  /* add space between items */
-  display: flex;
-  flex-direction: column;
-  gap: var(--space-16);
-}
-
-.status-dropdown.hide {
-  display: none;
-}
-
-.status-dropdown .radio-label {
-  display: flex;
-  align-items: center;
-  gap: var(--space-8);
-  cursor: pointer;
-}
-
-.form .cta-button {
-  margin-top: var(--space-32);
-}
-
-/* media queries */
-@media (min-width: 768px) {
-  .divided-inputs-container {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    column-gap: var(--space-16);
-  }
+.fa-pen-to-square:hover{
+    color:rgb(118, 118, 237);
 }
